# EvolvedAI

./: .gitignore  README.md  pyproject.toml
.github/workflows/: verification.yml
config/: defaults.yaml  evals.yaml  prompts.yaml  worlds.yaml
docs/: COMMUNITY_COMPUTE.md  CONSTITUTION.md  EVALS.md  OPERATIONS.md  TECH_SPEC.md  THREAT_MODEL.md  WORLDS.md
evals/: __init__.py  helpers.py
evals/hidden/: __init__.py  anti_corruption.py  coalition_deception.py  diffusion_alerts.py  inheritance_smuggling.py  taboo_recurrence.py
evals/public/: __init__.py  artifact_quality.py  calibration.py  citation_fidelity.py  correction_acceptance.py  honesty.py
roles/: adversary.md  archivist.md  citizen.md  judge.md  steward.md
scripts/: inspect_artifacts.py  inspect_drift.py  inspect_lineage.py  replay_generation.py  replay_lifespan.py  run_comparative_batches.py  run_experiment.py  run_generation.py  run_hypothesis_suite.py  seed_demo_data.py  verify_ci.sh
society/: __init__.py  analysis.py  config.py  constants.py  experiment.py  generation.py  governance.py  inheritance.py  lifespan.py  memorials.py  memory.py  orchestrator.py  prompts.py  providers.py  replay.py  schemas.py  selection.py  storage.py  trust.py  utils.py  variation.py
substrate/: README.md
tests/: __init__.py  conftest.py
tests/fixtures/: mock_behaviors.json
tests/integration/: test_bundle_diversity_selection.py  test_comparative_batches.py  test_experiment_runner.py  test_generation_runner.py  test_hidden_eval_disqualification.py  (+7 more)
worlds/: __init__.py  base.py  shared_notebook_v0.py
(+12 files in other folders)
